Almost playable °-°
Removing Survivors from the main list also removes them from the raiding
list.
"Next day" button.
Bit of improvement everywhere.
Some buttons are made disabled when needed